Support for lowest and highest registers

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,7 +229,7 @@
 
     };
 
-    function Note(pitch, duration, cfg) {
+    function Note(pitch, duration) {
         this.noteRoot = '';
         this.noteOctave = 0;
         this.noteComma = '';
