changing accidentals support

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,6 +189,16 @@
         do7: -5.5
     };
 
+    const noteNameDict = {
+        c: "do",
+        d: "re",
+        e: "mi",
+        f: "fa",
+        g: "sol",
+        a: "la",
+        b: "si"
+    };
+
     const symbols = {
         b8: "M 0,0.33443646 M 0.0072,-3.1402835 v 0.535686 c 0,0.04343 0.02172,0.07963 0.07963,0.07963 0.01447,0 0.463296,-0.166497 0.485013,-0.173736 0.05067,0 0.07239,0.02896 0.07239,0.05067 0,0.09411 0,0.188214 0.01447,0.260604 0,0.08687 -0.01447,0.108585 -0.06515,0.123063 -0.04343,0.02172 -0.477774,0.202692 -0.477774,0.202692 -0.07239,0 -0.108585,0.02172 -0.108585,0.07239 v 0.528447 c 0,0.04343 0.02172,0.08687 0.08687,0.08687 0.02172,0 0.419862,-0.159258 0.477774,-0.188214 0.07239,0 0.09411,0.04343 0.09411,0.07963 0.02172,1.65049196 0.06515,3.5253929 0.108585,3.5688269 0.02896,0.05067 0.05791,0.06515 0.09411,0.06515 0.02896,0 0.05791,-0.02172 0.05791,-0.02172 0.311277,-0.166497 0.571881,-0.463296 0.810768,-0.637032 0.919353,-0.64427097 1.252347,-1.27406394 1.252347,-1.76631593 0,-0.59359797 -0.456057,-0.95554797 -0.933831,-0.98450397 -0.180975,0 -0.398145,0.07963 -0.557403,0.173736 -0.07963,0.04343 -0.166497,0.14478 -0.260604,0.14478 -0.0072,0 -0.02172,-0.0072 -0.02896,-0.0072 -0.07239,-0.02896 -0.115824,-0.108585 -0.115824,-0.188214 0,-0.05067 0,-0.238887 0.01447,-0.477774 0,-0.04343 0,-0.14478 0.07239,-0.166497 0.07239,-0.03619 1.469517,-0.542925 1.469517,-0.542925 0.05791,-0.02172 0.09411,-0.06515 0.09411,-0.115824 v -0.4994909 c 0,-0.04343 -0.01447,-0.08687 -0.06515,-0.08687 -0.02896,0 -1.4478,0.521208 -1.491234,0.542925 -0.0073,0 -0.05791,-0.02896 -0.05791,-0.05067 0.0072,-0.09411 0.0072,-0.231648 0.0072,-0.28956 0,-0.06515 0.02896,-0.09411 0.07239,-0.115824 0.04343,-0.02172 1.440561,-0.5356861 1.440561,-0.5356861 0.05791,-0.01448 0.09411,-0.05791 0.09411,-0.101346 v -0.513969 c 0,-0.0362 -0.01447,-0.07963 -0.06515,-0.07963 -0.02896,0 -1.418844,0.50673 -1.4478,0.521208 -0.05067,0 -0.07239,-0.02896 -0.07239,-0.05067 0,-0.202692 0.0072,-0.325755 0.0072,-0.369189 0,-0.115824 -0.09411,-0.166497 -0.195453,-0.166497 -0.14478,0 -0.311277,0.108585 -0.325755,0.296799 v 0.448818 c 0,0.01448 -0.0072,0.07239 -0.05791,0.07963 -0.03619,0.02172 -0.470535,0.188214 -0.470535,0.188214 -0.07239,0.0072 -0.108585,0.04343 -0.108585,0.07963 m 1.107567,2.94627299 c 0.04343,-0.137541 0.311277,-0.369189 0.470535,-0.44881797 0.09411,-0.04343 0.173736,-0.06515 0.260604,-0.06515 0.101346,0 0.195453,0.02896 0.267843,0.101346 0.09411,0.11582397 0.159258,0.28232097 0.159258,0.49225197 0,0.57188097 -0.456057,1.12928391 -0.926592,1.40436591 -0.04343,0.02172 -0.07239,0.03619 -0.09411,0.03619 -0.08687,0 -0.115824,-0.108585 -0.115824,-0.166497 0,0 -0.02896,-0.66598797 -0.02896,-1.07861094 0,-0.130302 0,-0.23888697 0.0072,-0.27508197",
         b5: "M 0,0.17463801 M 0.123063,1.9481929 c 0.03619,0.04343 0.06515,0.05067 0.09411,0.05067 0.03619,0 0.06515,-0.02172 0.06515,-0.02172 0.311277,-0.173736 0.564642,-0.456057 0.825246,-0.637032 0.926592,-0.64427092 1.2451081,-1.28130289 1.2451081,-1.75907686 0,-0.59359794 -0.4560571,-0.97002594 -0.9338311,-0.99898194 -0.180975,0 -0.427101,0.07963 -0.571881,0.1737359 -0.06515,0.05067 -0.180975,0.1447801 -0.231648,0.1447801 -0.02172,0 -0.02896,0 -0.05067,-0.0072 -0.07239,-0.02896 -0.115824,-0.108585 -0.115824,-0.1809749 0.0072,-0.224409 0.07239,-2.7291031 0.07239,-2.9390341 0,-0.115824 -0.09411,-0.173736 -0.195453,-0.173736 -0.152019,0 -0.318516,0.101346 -0.325755,0.28956 0,0 0.04343,5.9504579 0.123063,6.0590429 m 0.354711,-2.30200188 c 0.07239,-0.209931 0.492252,-0.51396897 0.731139,-0.51396897 0.3040381,0 0.427101,0.34747197 0.427101,0.60807597 0,0.55740297 -0.4777739,1.12204491 -0.926592,1.40436588 -0.04343,0.02172 -0.07239,0.02896 -0.101346,0.02896 -0.09411,0 -0.115824,-0.101346 -0.115824,-0.152019 0,0 -0.03619,-0.62979294 -0.03619,-1.04241591 0,-0.166497 0.01447,-0.29679897 0.02172,-0.33299397",
@@ -226,7 +236,7 @@
         n8r: "m 2.2708775,-1.7870966 c -1.54085398,0.650875 -2.58950357,2.11709 -2.1828126,3.2204562 V 16.824143 l 0.38652987,-0.02011 C 0.64252581,14.416673 1.3249656,13.673249 2.2362435,12.535567 3.117252,11.435668 4.4722097,10.081266 4.7234316,8.13634 4.9944443,6.0381944 3.9546318,4.0372565 3.3292097,2.6229792 L 3.0170808,2.5899063 C 3.4521352,3.66766 3.8855491,4.5206767 4.1286483,5.876534 4.4658597,7.7575363 3.7523579,9.450605 2.65947,10.5672 2.0869921,11.152114 1.3294635,11.578596 0.52989268,11.707713 V 2.0509236 C 1.2839287,2.6801027 2.707386,2.7639756 3.9684431,2.23129 5.5374487,1.5685088 6.2587558,0.2035755 5.79002,-0.9060076 5.4677839,-1.6688543 4.6667843,-2.112333 3.687826,-2.0997388 c -0.4449763,0.00571 -0.9266502,0.1055211 -1.4169485,0.3126422 z",
         n16r: "M 2.2743583,-1.7866217 C 0.95906167,-1.2310178 0.00407458,-0.0816096 0.00370417,0.928741 L 0,17.114031 l 0.44182771,0.0032 c 0,-2.153338 1.25819959,-2.762779 1.83141939,-3.412199 C 4.719955,10.932975 5.1669156,9.223548 4.5247719,6.8268988 4.7752794,6.3078128 4.9369662,5.7690153 4.9681606,5.2078605 5.047959,3.7732103 4.8119506,2.9554361 4.4074821,2.0142603 5.668645,1.3004938 6.216015,0.0943859 5.793449,-0.9059719 5.4711865,-1.6688345 4.6701869,-2.1123 3.6912815,-2.0997402 3.2463581,-2.0940252 2.7646842,-1.9937428 2.2743583,-1.7866217 Z M 0.44190708,1.9656034 C 1.1667067,2.6704534 2.6568135,2.7867536 3.971925,2.2312186 4.0380973,2.203268 4.1005125,2.17219 4.1636421,2.1418159 4.5836152,3.3491361 4.7007462,4.5496274 4.5165962,5.3529844 4.2614056,6.4661632 3.6353221,7.1032349 2.7068992,7.804005 2.038694,8.308359 1.1276012,8.857735 0.44190708,9.355839 Z M 4.2452925,7.3394232 C 4.507574,9.640372 3.7653383,10.473926 2.793709,11.640463 2.2422115,12.302567 1.2124531,13.046856 0.45069125,13.535436 0.53967063,11.721373 1.4870113,10.450248 2.0816094,9.878312 2.8998598,9.091216 3.6957265,8.247023 4.2452925,7.3394232 Z",
         n32r: "m 0,21.082794 0.44182771,0.0032 c 0,-2.153338 1.25819959,-2.762779 1.83141939,-3.412201 2.5547637,-2.894457 2.9272177,-4.631465 2.158021,-7.201109 C 4.8978344,9.27113 4.8795517,8.153673 4.5242692,6.8274015 4.7749354,6.3081382 4.9369662,5.7687321 4.9681871,5.2073472 5.0479854,3.7726731 4.8114744,2.9554625 4.4069794,2.0142602 5.6683275,1.3004832 6.2160944,0.0944917 5.793449,-0.9059746 5.4712129,-1.668808 4.6702133,-2.1123 3.6912815,-2.0997402 3.2463581,-2.0940252 2.7646842,-1.9937455 2.2743583,-1.7866217 0.95906167,-1.2310152 0.00195792,-0.081607 0.00185208,0.9294924 Z M 0.44193354,1.9656034 C 1.1667067,2.6704666 2.6563108,2.7867616 3.9714223,2.2312212 4.0377269,2.2032124 4.1004067,2.1722721 4.1636685,2.1418212 4.5836152,3.3491308 4.7007462,4.5496274 4.5165962,5.352995 4.2614056,6.4661738 3.6352956,7.1032614 2.7068992,7.8040077 2.038694,8.308364 1.1276277,8.857735 0.44193354,9.35585 Z M 4.245319,7.3394364 C 4.507574,9.640372 3.7648621,10.473918 2.7932063,11.640466 2.2417352,12.302557 1.2124531,13.046827 0.45071771,13.535441 0.53967063,11.721378 1.4870113,10.449725 2.0816094,9.877783 2.8998862,9.090687 3.6957265,8.247037 4.245319,7.3394364 Z M 4.204494,10.986241 c 0.3718984,2.549787 -0.3954197,3.403333 -1.4112875,4.622983 -0.5534554,0.664475 -1.58877,1.412134 -2.35127266,1.900661 v -0.392748 c 0,-2.153338 1.25817316,-2.762776 1.83139296,-3.412199 0.9020968,-1.022022 1.5268575,-1.898131 1.9311672,-2.718697 z",
-
+        notaYOffset: -2.34
     };
 
     function Note(pitch, duration) {
@@ -237,6 +247,13 @@
         let durParts = this.durStr.split('/');
         this.durNum = parseInt(durParts[0]);
         this.durDen = parseInt(durParts[1]);
+        this.isDotted = (this.durNum === 3);
+
+        if (this.isDotted) {
+            this.durNum = 1;
+            this.durDen = this.durDen / 2;
+            this.durStr = this.durNum + "/" + this.durDen;
+        }
 
         if (pitch.includes('#') || pitch.includes('b')) {
             this.noteComma = pitch.substr(-2);
@@ -317,7 +334,7 @@
         this.drawNote = function (paper, porteLiHe, lThickness, left, top, color, lColor) {
 
             let portePos = notePositions[this.getNote()];
-            let noteBodyTop = top + (lThickness / 2) + porteLiHe * portePos;
+            let noteBodyTop = top + porteLiHe * portePos;
             left = Math.round(left * 100) / 100;
             noteBodyTop = Math.round(noteBodyTop * 100) / 100;
 
@@ -354,20 +371,43 @@
 
             noteBody.transform(translateStr + ' ' + scaleStr);
             noteBody.attr({
-                fill: 'color'
+                fill: color
             });
             let noteG = paper.g();
             noteG.add(noteBody);
+
+            if (this.isDotted) {
+                let dot = paper.circle((left + porteLiHe * 3.5 / 2), noteBodyTop, (porteLiHe / 5));
+                dot.attr({
+                    fill: color
+                });
+                noteG.add(dot);
+            }
 
             return noteG;
         };
 
         this.getWidth = function (porteLiHe, paper) {
+            let left = 0;
+            let top = 0;
             let scaleFactor = porteLiHe / 5;
+
             let path = this.getPathStr(this.durStr);
             let noteBody = paper.path(path);
-            let width = noteBody.getBBox().width * scaleFactor;
-            noteBody.remove();
+            let scaleStr = 's' + scaleFactor + ' 0 0';
+            let translateStr = 't ' + left + ' ' + top;
+            noteBody.transform(translateStr + ' ' + scaleStr);
+
+            let noteG = paper.g();
+            noteG.add(noteBody);
+
+            if (this.isDotted) {
+                let dot = paper.circle((left + porteLiHe * 3.5 / 2), top, (porteLiHe / 5));
+                noteG.add(dot);
+            }
+
+            let width = noteG.getBBox().width;
+            noteG.remove();
             return width;
         };
     }
@@ -411,6 +451,41 @@
             this.widthDiff = diff;
         };
 
+        this.getReqAccidental = function (accidentals, note) {
+            let noteName = note.noteRoot;
+            let noteAcc = note.noteComma;
+            if (noteName in accidentals) {
+                let globAcc = accidentals[noteName];
+                if (noteAcc === globAcc) {
+                    return "";
+                } else {
+                    if (noteAcc === "") {
+                        return "n";
+                    }
+                    return noteAcc;
+                }
+            }
+            return noteAcc;
+        };
+
+        this.drawAcci = function (acci, note, paper, porteLiHe, left, top, color) {
+            let notePos = notePositions[note.getNote()];
+
+            let accPath = symbols[acci];
+            let accSymbol = paper.path(accPath);
+            let scaleFactor = parseFloat((porteLiHe / 3.25).toFixed(2));
+
+            top = top + (notePos * porteLiHe);
+
+            let translateStr = 't ' + left + ' ' + top;
+            let scaleStr = 's' + scaleFactor + ' 0 0';
+            accSymbol.transform(translateStr + ' ' + scaleStr);
+            accSymbol.attr({
+                fill: color
+            });
+            return accSymbol;
+        };
+
         this.drawMeasure = function (sParams) {
             this.startPos = sParams.startLeft;
             let paper = sParams.paper;
@@ -423,6 +498,11 @@
             let lColor = sParams.cfg.porteLineColor;
 
             for (let note of this.notes) {
+                let acci = this.getReqAccidental(sParams.accidentals, note);
+                if (acci) {
+                    acci = this.drawAcci(acci, note, paper, porteLiHe, left, top, color);
+                    left += acci.getBBox().width;
+                }
                 let noteG = note.drawNote(paper, porteLiHe, lThickness, left, top, color, lColor);
                 left += noteG.getBBox().width + porteLiHe * 1.5 + rw;
             }
@@ -460,6 +540,7 @@
         this.solAnahtari = null;
         this.measures = [];
         this.remainingWidth = width;
+        this.accidentals = accidentals;
 
         let porteLiHe = this.configs.porteLineHeight;
         let porteHeight = 4 * porteLiHe;
@@ -628,12 +709,19 @@
         this.drawSatir = function () {
             this.distributeWidth(this.remainingWidth);
 
+            let acci = {};
+            for (let note of this.accidentals.notes) {
+                let name = noteNameDict[note.noteRoot];
+                acci[name] = note.noteComma;
+            }
+
             let sParams = {
                 startLeft: leftUsablePos,
                 startTop: this.top,
                 cfg: this.configs,
                 endPos: this.width + this.left,
-                paper: this.paper
+                paper: this.paper,
+                accidentals: acci
             };
 
             for (let measure of this.measures) {
@@ -645,7 +733,7 @@
         this.init = function () {
             this.drawLines();
             leftUsablePos = this.drawClef();
-            leftUsablePos = this.drawAccidentals(accidentals, leftUsablePos);
+            leftUsablePos = this.drawAccidentals(this.accidentals, leftUsablePos);
             leftUsablePos = this.drawMeter(leftUsablePos, timeSig);
 
             this.remainingWidth = this.width - (leftUsablePos - this.left);
@@ -766,15 +854,14 @@
     tmmScore.setMeter('9/8');
 
     let measure = new Measure();
-    measure.addNote('Si3', '1/32');
-    measure.addNote('Do4', '1/8');
-    measure.addNote('Re4', '1/8');
-    measure.addNote('La4', '1/16');
-    measure.addNote('Si4b4', '1/8');
-    measure.addNote('Do5#4', '1/4');
-    measure.addNote('Re5', '1/2');
+    measure.addNote('Do4#4', '3/64');
+    measure.addNote('La4', '1/4');
+    measure.addNote('Do5', '1/16');
+    measure.addNote('Si4b4', '3/16');
+    measure.addNote('Do5#4', '3/8');
+    measure.addNote('Re5', '3/4');
     measure.addNote('Sol5', '1/1');
-    measure.addNote('Do6#4', '1/4');
+    measure.addNote('Do6#4', '3/8');
 
     tmmScore.addMeasure(measure);
 
